--- a/client/.prettierrc.json
+++ b/client/.prettierrc.json
@@ -5,5 +5,6 @@
     "singleAttributePerLine": true,
     "singleQuote": true,
     "tabWidth": 4,
-    "trailingComma": "es5"
+    "trailingComma": "es5",
+    "plugins": ["prettier-plugin-tailwindcss"]
 }
