--- a/client/package.json
+++ b/client/package.json
@@ -18,14 +18,19 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.16.0",
+        "@iconify-json/mdi": "^1.2.1",
+        "autoprefixer": "^10.4.20",
         "eslint": "^9.16.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-perfectionist": "^4.1.2",
         "eslint-plugin-prettier": "^5.2.1",
         "eslint-plugin-vue": "^9.32.0",
         "globals": "^15.13.0",
+        "postcss": "^8.4.49",
         "prettier": "^3.4.1",
+        "prettier-plugin-tailwindcss": "^0.6.9",
         "sass": "^1.81.0",
+        "tailwindcss": "^3.4.15",
         "typescript": "^5.7.2",
         "typescript-eslint": "^8.16.0",
         "vue-tsc": "^2.1.10"
