feat: Добавил строку поиска, отображение результата запроса

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -5,7 +5,8 @@
         "baseUrl": "./",
         "paths": {
             "@/widgets/*": ["./src/widgets/*"],
-            "@/features/*": ["./src/features/*"]
+            "@/features/*": ["./src/features/*"],
+            "@/entities/*": ["./src/entities/*"]
         }
     }
 }
