--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@nuxt/ui": "^2.19.2",
+        "@vueuse/core": "^12.0.0",
         "nuxt": "^3.14.1592",
         "vue": "latest",
         "vue-router": "latest"
