Добавил скрипты сборки образов из докер компоуз

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,3 +23,6 @@ jobs:
         script: |
           cd ~/nornikel_hack
           git pull origin main
+          docker-compose down
+          docker-compose pull
+          docker-compose up -d
