--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
 
   backend:
     build:
-      context: ./app
+      context: ./server
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
