Отладка github actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,19 +12,25 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+
     - name: Create SSH directory
       run: |
         mkdir -p ~/.ssh
-        chmod 700 ~/.ssh  # Убедиться, что права доступа корректные
+        chmod 700 ~/.ssh
+
     - name: Fix SSH permissions
       run: |
         echo "${{ secrets.VM_SSH_KEY }}" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
+
     - name: Configure SSH
       run: |
-        echo -e "Host your-vm-ip\n\tStrictHostKeyChecking no\n\tIdentityFile ~/.ssh/id_rsa" >> ~/.ssh/config
+        echo -e "Host ${{ secrets.VM_HOST }}\n\tStrictHostKeyChecking no\n\tIdentityFile ~/.ssh/id_rsa" >> ~/.ssh/config
+        chmod 600 ~/.ssh/config
+
     - name: Debug SSH connection
-      run: ssh -vvv -i ~/.ssh/id_rsa user@your-vm-ip
+      run: ssh -vvv -i ~/.ssh/id_rsa ${{ secrets.VM_USER }}@${{ secrets.VM_HOST }}
+
     - name: Deploy to VM
       uses: appleboy/ssh-action@v0.1.10
       with:
