--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Fix SSH permissions
       run: |
-        echo "${{ secrets.VM_SSH_KEY }}" > ~/.ssh/id_rsa
+        echo -e "${{ secrets.VM_SSH_KEY }}" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
 
     - name: Configure SSH
@@ -28,8 +28,11 @@ jobs:
         echo -e "Host ${{ secrets.VM_HOST }}\n\tStrictHostKeyChecking no\n\tIdentityFile ~/.ssh/id_rsa" >> ~/.ssh/config
         chmod 600 ~/.ssh/config
 
+    - name: Add host to known_hosts
+      run: ssh-keyscan -H ${{ secrets.VM_HOST }} >> ~/.ssh/known_hosts
+
     - name: Debug SSH connection
-      run: ssh -vvv -i ~/.ssh/id_rsa ${{ secrets.VM_USER }}@${{ secrets.VM_HOST }}
+      run: ssh -i ~/.ssh/id_rsa ${{ secrets.VM_USER }}@${{ secrets.VM_HOST }} hostname
 
     - name: Deploy to VM
       uses: appleboy/ssh-action@v0.1.10
