Отладка скрипта github actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,9 +31,6 @@ jobs:
     - name: Add host to known_hosts
       run: ssh-keyscan -H ${{ secrets.VM_HOST }} >> ~/.ssh/known_hosts
 
-    - name: Debug SSH connection
-      run: ssh -i ~/.ssh/id_rsa ${{ secrets.VM_USER }}@${{ secrets.VM_HOST }} hostname
-
     - name: Deploy to VM
       uses: appleboy/ssh-action@v0.1.10
       with:
@@ -46,4 +43,5 @@ jobs:
           git pull origin main
           docker-compose down
           docker-compose pull
+          docker-compose build --no-cache
           docker-compose up -d
