feat: добавил обработку ошибки, урл для бэка берется из файла .env

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -6,7 +6,8 @@
         "paths": {
             "@/widgets/*": ["./src/widgets/*"],
             "@/features/*": ["./src/features/*"],
-            "@/entities/*": ["./src/entities/*"]
+            "@/entities/*": ["./src/entities/*"],
+            "@/pages/*": ["./src/pages/*"]
         }
     }
 }
