--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
+    env_file: 
+      - .env # Указываем путь к файлу .env
     networks:
       - app_network
 
