--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,13 @@
 FROM python:3.10
 
 WORKDIR /app
+
+COPY requirements-base.txt .
+RUN pip install -r requirements-base.txt
+
 COPY requirements.txt .
 RUN pip install -r requirements.txt
+
 COPY . .
 
 EXPOSE 8000
