feat: список файлов

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -7,7 +7,8 @@
             "@/widgets/*": ["./src/widgets/*"],
             "@/features/*": ["./src/features/*"],
             "@/entities/*": ["./src/entities/*"],
-            "@/pages/*": ["./src/pages/*"]
+            "@/pages/*": ["./src/pages/*"],
+            "@/shared/*": ["./src/shared/*"]
         }
     }
 }
