--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,11 @@
     },
     "dependencies": {
         "@nuxt/ui": "^2.19.2",
+        "@pinia/nuxt": "^0.9.0",
         "@vueuse/core": "^12.0.0",
         "nuxt": "^3.14.1592",
+        "nuxt-mdi": "^2.1.1",
+        "pinia": "^2.3.0",
         "vue": "latest",
         "vue-router": "latest"
     },
