--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
         username: ${{ secrets.VM_USER }}
         key: ${{ secrets.VM_SSH_KEY }}
         port: 22
-        timeout: 2400
+        timeout: 2400s
         script: |
           # Переменные окружения
           echo "API_KEY=${{ secrets.API_KEY }}" >> ~/nornikel_hack/.env
