изменил таймаут на докер компоуз

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,9 +31,6 @@ jobs:
     - name: Add host to known_hosts
       run: ssh-keyscan -H ${{ secrets.VM_HOST }} >> ~/.ssh/known_hosts
 
-    - name: Set Docker Compose Timeout
-      run: echo "COMPOSE_HTTP_TIMEOUT=600" >> $GITHUB_ENV    
-
     - name: Deploy and pass environment variables to VM
       uses: appleboy/ssh-action@v0.1.10
       with:
@@ -52,4 +49,4 @@ jobs:
           docker-compose down
           docker-compose pull
           docker-compose build --no-cache
-          docker-compose up -d
+          COMPOSE_HTTP_TIMEOUT=2400 docker-compose up -d
