--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,1 +1,11 @@
 docling==2.8.3
+fastapi==0.115.6
+uvicorn==0.32.1
+python-dotenv==1.0.1
+python-multipart==0.0.19
+python-docx==1.1.2
+nltk==3.9.1
+openai==1.57.0
+faiss-cpu==1.9.0.post1
+fastembed==0.4.2
+sentence_transformers==3.3.1
