--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   client:
     build:
@@ -29,6 +27,8 @@ services:
     environment:
       - WEAVIATE_URL=http://weaviate:8080
     restart: "on-failure:10"
+    volumes:
+      - ./server:/app
 
   weaviate:
     image: cr.weaviate.io/semitechnologies/weaviate:1.27.7
