--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -78,6 +78,7 @@ dependencies = [
     "pydantic-settings==2.6.1",
     "pydantic==2.9.2",
     "pygments==2.18.0",
+    "pypdf2>=3.0.1",
     "pypdfium2==4.30.0",
     "pytest==8.3.4",
     "python-bidi==0.6.3",
